prevent jump between sites

--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -69,7 +69,7 @@ header#document-header
                             border-bottom-left-radius: 0
                             border-top-left-radius: 0
                             margin-left: -$spacing-2
-                            padding-left: space(6)
+                            padding-left: space(7)
                     &.nav-search
                         margin-left: $spacing-2
                         @include media-breakpoint-down(desktop)
